# yeast

./: .gitattributes  .gitignore  Cargo.toml  README.md  build.sh  genealogy.dot  general_thoughts.md
.github/workflows/: main.yml
data/liquid/2023/: 2023-05-09-7.toml  2023-05-13-15a.toml  2023-05-13-15b.toml  2023-05-13-15c.toml  2023-05-14-1a.toml  2023-05-14-1b.toml  2023-05-14-1c.toml  2023-05-15-13a.toml  2023-05-15-13b.toml  2023-05-15-13c.toml  2023-05-16-11.toml  2023-05-16-12.toml  2023-05-16-13.toml  2023-05-21-7a.toml  2023-05-21-7b.toml  2023-05-21-7c.toml  2023-05-21-8a.toml  2023-05-21-8b.toml  2023-05-21-8c.toml  2023-05-21-9a.toml  2023-05-21-9b.toml  2023-05-21-9c.toml  2023-05-22-2a.toml  2023-05-22-2b.toml  2023-05-22-2c.toml  2023-05-24-1a.toml  2023-05-24-1b.toml  2023-05-24-1c.toml  2023-05-24-2a.toml  2023-05-24-2b.toml  2023-05-24-2c.toml  2023-05-24-3a.toml  2023-05-24-3b.toml  2023-05-24-3c.toml  2023-05-25-1a.toml  2023-05-25-1b.toml  2023-05-25-1c.toml  2023-05-25-2a.toml  (+329 more)
doc/: methods.md  organoleptic.md  packaging.md  propagation.md  yeast-capture.md  yeast-uniformity.md
doc/legacy/: packaging-0.1.0.md  propagation-0.1.0.md  yeast-uniformity-0.1.0.md
src/: dim_analysis.rs  main.rs
yeast-lib/: Cargo.toml
yeast-lib/src/: averager_subjective_values.rs  calc.rs  clap_parser.rs  common.rs  density.rs  kinetics.rs  lib.rs  raw_data_processing.rs  strain_summary.rs  uncertain.rs
yeast-lib/src/raw_data_processing/: keywords.rs  liquid.rs  organoleptic.rs  plate.rs  slant.rs  stock.rs  strain.rs  utils.rs  valid_methods.rs
(+147 files in other folders)
