[package]
name = "process-yeast"
version = "0.1.0"
edition = "2021"

[dependencies]
argmin = "0.7"
argmin-math = { version = "0.2", features = ["ndarray_latest-serde", "nalgebra_latest-serde"] }
chrono = "0.4"
lazy_static = "1.4.0"
nalgebra = "0.32.2"
ndarray = "0.15.6"
petgraph = "0.6.3"
plotters = "0.3"
regex = "1.8.4"
serde = { version = "1.0", features = ["derive"] }
time = { version = "0.3.21", features = ["macros", "parsing"] }
toml = "0.7.3"

