[package]
name = "yeast-lib"
version = "0.1.0"
edition = "2021"

[dependencies]
itertools = "0.13.0"
lazy_static = "1.5.0"
multicalc = "0.5.0"
nalgebra = "0.33.0"
petgraph = "0.6.5"
plotters = "0.3.6"
probability = "0.20.3"
rayon = "1.10.0"
regex = "1.10.6"
semver = "1.0.23"
serde = { version = "1.0.208", features = ["derive"] }
time = { version = "0.3.21", features = ["macros", "local-offset", "parsing"] }
toml = "0.8.18"
